--- a/web/themes/drupal8_zymphonies_theme/css/custom-style.css
+++ b/web/themes/drupal8_zymphonies_theme/css/custom-style.css
@@ -557,3 +557,12 @@ ul.links.inline li{
   text-align: left;
   margin-bottom: 5px;
 }
+
+.main-header{
+/*background-size: contain;*/
+
+}
+
+#main-menu a:link a:visited a:hover{
+  color: black;
+}
